# audio_plagin_EQ

./: CMakeLists.txt  README.md  test_config2.filtergraph  test_config_audio_plagin_host.filtergraph
Audio_Plagin_Host/: CMakeLists.txt
my_plagin/: CMakeLists.txt
my_plagin/include/eq_plagin/: PluginEditor.h  PluginProcessor.h
my_plagin/source/: PluginEditor.cpp  PluginProcessor.cpp
play_audio/: CMakeLists.txt
play_audio/include/: PluginEditor.h  PluginProcessor.h
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
